New post, quantum computers (I)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     {{ content }}
   </div>
 
-  {{ site.author.name }} | <div id="date">{{ page.date | date: "%Y-%m-%d" }}</div>
+  {{ site.author.name }} | <span id="date">{{ page.date | date: "%Y-%m-%d" }}</span>
 
   <!-- { % include disqus.html % } -->
 </article>
